<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/fragment_anadir_receta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:layout_marginBottom="72dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Imagen de la receta -->
        <ImageView
            android:id="@+id/image_view_receta_anadir"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/receta_imagen"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <!-- Botón para seleccionar imagen -->
        <Button
            android:id="@+id/button_seleccionar_imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:layout_marginTop="8dp" />

        <!-- Nombre de la receta -->
        <EditText
            android:id="@+id/edit_text_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre de la Receta"
            android:inputType="textPersonName"
            android:layout_marginTop="16dp" />

        <!-- Categoría -->
        <EditText
            android:id="@+id/edit_text_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Categoría"
            android:inputType="text"
            android:layout_marginTop="8dp" />

        <!-- Tiempo de preparación -->
        <EditText
            android:id="@+id/edit_text_tiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tiempo de Preparación (minutos)"
            android:inputType="number"
            android:layout_marginTop="8dp" />

        <!-- Ingredientes -->
        <EditText
            android:id="@+id/edit_text_ingredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingredientes"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top"
            android:layout_marginTop="8dp" />

        <!-- Instrucciones -->
        <EditText
            android:id="@+id/edit_text_instrucciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Instrucciones"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:gravity="top"
            android:layout_marginTop="8dp" />

        <!-- Botón para guardar la receta -->
        <Button
            android:id="@+id/button_guardar_receta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_receta"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
